# Medlook-1

./: README.md  main.py  model_unquant.tflite  pyproject.toml  tflite_runtime-2.3.0-cp38-cp38-linux_x86_64.whl
templates/: index.html
